<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:textSize="24sp"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/findStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/findStation" />

    <Button
        android:id="@+id/goFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/findStation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:onClick="goFind"
        android:text="@string/goFind" />

</RelativeLayout>